@@ -1,3 +1,7 @@
+2009-03-06  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* music.cc: New option -v.
+
 2009-03-04  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* music.cc (print_map): New function.
